# fastapi-tutor

./: demo.ipynb  main.py  models.py  pyproject.toml
2.  Introduction to FastAPI/: main.py  models.py
3. Building APIs/: async.py  crud.py  custom-response.py  models.py  sync.py
4. Database Integration/crud-app/: crud.py  database.py  main.py  models.py  schemas.py  sqlite-demo.py  test.db
5. Machine Learning Integration/: keras_model.keras  keras_serialization.ipynb  model.pkl  pickle_joblib_serialization.ipynb
5. Machine Learning Integration/ml-model/: main.py  model.joblib
5.1 ML mode serialization/: keras_model.keras  keras_serialization.ipynb  model.joblib
5.2 ML endpoints/: main.py  predict.py  schemas.py  train.py
6. Advanced FastAPI Concepts/6.1 middleware/: builtin-middlewares.py  custom-middleware.py
6. Advanced FastAPI Concepts/6.2 dependency-injection/: config_management.py  database-connection.py  user_auth.py
6. Advanced FastAPI Concepts/6.3 jwt-authentication/: auth.py  main.py  models.py  utils.py
6. Advanced FastAPI Concepts/6.4 api-keys/: env-apikeys.py  headers.py
6. Advanced FastAPI Concepts/api-keys/: env-apikeys.py  headers.py
6. Advanced FastAPI Concepts/dependency-injection/: config_management.py  database-connection.py  user_auth.py
6. Advanced FastAPI Concepts/jwt-authentication/: main.py  utils.py
6. Advanced FastAPI Concepts/middleware/: builtin-middlewares.py  cors-middleware.py  custom-middleware.py  gzip-middleware.py  (+1 more)
8. Performance Optimization and Monitoring/: prometheus-setup.py  redis-setup.py
(+42 files in other folders)
