[project]
name = "fastapi-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "joblib>=1.5.2",
    "keras>=3.12.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pyrefly>=0.42.2",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "tensorflow>=2.20.0",
    "uvicorn>=0.38.0",
]
